<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.bbtquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:hint="Name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#0000cd"
            android:text="@string/question1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton_1a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1a"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1b"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_1c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1c"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_1d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1d"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#0000cd"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton_2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2a"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2b"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2c"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2d"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#0000cd"
            android:text="@string/question3" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton_3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3a"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3b"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_3c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3c"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_3d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3d"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#0000cd"
            android:text="@string/question4" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton_4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4a"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4b"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4c"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:id="@+id/radioButton_4d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4d"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#0000cd"
            android:text="@string/question5" />

        <EditText
            android:id="@+id/editText_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Answer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#0000cd"
            android:text="@string/question6" />

        <EditText
            android:id="@+id/editText_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Answer"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:textSize="16sp"
            android:textColor="#0000cd"
            android:text="@string/question7" />

        <CheckBox
            android:id="@+id/checkBox_7a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7a" />

        <CheckBox
            android:id="@+id/checkBox_7b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7b" />

        <CheckBox
            android:id="@+id/checkBox_7c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7c" />

        <CheckBox
            android:id="@+id/checkBox_7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7d" />

        <Button
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Submit"
            android:text="Submit"
            android:textSize="12sp"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>